--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: Burnett01/rsync-deployments@5.2.1
       with:
         switches: -avzr --delete --exclude=".git" --exclude=".github"
-        path: /
+        path: /public_html/yusuf.keifproject.com/
         remote_path: ${{ secrets.DEPLOY_PATH }}
         remote_host: ${{ secrets.DEPLOY_HOST }}
         remote_user: ${{ secrets.DEPLOY_USER }}
