--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
     - name: FTP Deploy
       uses: SamKirkland/FTP-Deploy-Action@3.1.2
       with:
-        ftp-server: yusuf.keifproject.com
+        ftp-server: ftp.keifproject.com
         ftp-username: u1584221
         ftp-password: ${{ secrets.DEPLOY_KEY }}
